# trivia-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
migrations/: 20201018223319_create-user-states.sql
src/: error.rs  keys.rs  main.rs  util.rs
src/commands/: mod.rs  points.rs  quiz.rs
src/model/: game_state.rs  mod.rs  user_state.rs
