[package]
name = "trivia-bot"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dashmap = "4.0.0-rc6"
dotenv = "0.15"
lazy_static = "1.4"
reqwest = "0.10.8"
sled = "0.34"
strsim = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.jservice-rs]
git = "https://github.com/drklee3/jservice"
branch = "main"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-core", "time"]

[dependencies.serenity]
version = "0.9.0-rc.1"
features = ["default", "collector"]
